Flex styles to fix issues on ie

--- a/content/themes/igcp/blocks/scss/block-home-hero.scss
+++ b/content/themes/igcp/blocks/scss/block-home-hero.scss
@@ -41,7 +41,7 @@
   }
   @include break-min($md) {
     width: calc((4 / 12) * 100%);
-    flex: 1 1 auto;
+    flex: 1 1 calc((4 / 12) * 100%);
   }
 }
 
@@ -54,7 +54,7 @@
   }
   @include break-min($md) {
     width: calc((8 / 12) * 100%);
-    flex: 2 1 auto;
+    flex: 1 1 calc((8 / 12) * 100%);
   }
 }
 
